--- a/templates/profile.html
+++ b/templates/profile.html
@@ -60,9 +60,20 @@
                 <div class="row center-align">
                     <!--if user is logged in they are able to edit or delete their profile from the DB-->
                     {% if session.user|lower == user.username|lower %}
-                    <a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn right">edit</a>
-                    <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
-                        class="btn red left">delete</a><br>
+                    <div class="row">
+                        <div class="col s4">
+                            <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
+                                class="btn red left">delete</a><br>
+                        </div>
+                        <div class="col s4">
+                            <a href="{{ url_for('my_recipes', username=user.username.lower) }}" class="btn blue">my
+                                recipes</a>
+                        </div>
+                        <div class="col s4">
+                            <a href="{{ url_for('edit_profile', username=user.username|lower) }}"
+                                class="btn right">edit</a>
+                        </div>
+                    </div>
                     {% endif %}
                 </div>
             </div>
