--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
         type="text/css">
     <!--Link to style.css using jinja template-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon-32x32.png">
     <!--EmailJS script-->
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
     </script>
@@ -72,14 +73,14 @@
 
         <!--dropdown content for side nav-->
         <ul id="dropdown2" class="dropdown-content">
-            <li><a href="{{ url_for('all_recipes') }}" class="center-align">all recipes</a></li>
+            <li><a href="{{ url_for('all_recipes') }}">all recipes</a></li>
             <li class="divider"></li>
-            <li><a href="{{ url_for('show_starters') }}" class="center-align">starters</a></li>
-            <li><a href="{{ url_for('show_mains') }}" class="center-align">mains</a></li>
-            <li><a href="{{ url_for('show_desserts') }}" class="center-align">desserts</a></li>
-            <li><a href="{{ url_for('show_sides') }}" class="center-align">sides</a></li>
-            <li><a href="{{ url_for('show_cakes') }}" class="center-align">cakes and biscuits</a></li>
-            <li><a href="{{ url_for('show_drinks') }}" class="center-align">drinks</a></li>
+            <li><a href="{{ url_for('show_starters') }}">starters</a></li>
+            <li><a href="{{ url_for('show_mains') }}">mains</a></li>
+            <li><a href="{{ url_for('show_desserts') }}">desserts</a></li>
+            <li><a href="{{ url_for('show_sides') }}">sides</a></li>
+            <li><a href="{{ url_for('show_cakes') }}">cakes and biscuits</a></li>
+            <li><a href="{{ url_for('show_drinks') }}">drinks</a></li>
         </ul>
 
         <!--Materialize side nav bar for mobile/smaller devices-->
