removed effects from delete <a> in profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -63,8 +63,7 @@
                     <div class="row">
                         <!--modal a tag that calls the modal-->
                         <div class="col s4">
-                            <a href="#modal1"
-                                class="btn red left waves-effect waves-light btn modal-trigger">delete</a><br>
+                            <a href="#modal1" class="btn red left modal-trigger">delete</a><br>
                         </div>
                         <div class="col s4">
                             <a href="{{ url_for('my_recipes', username=user.username.lower) }}" class="btn blue">my
