added delete conf modal to show_recipe.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -75,15 +75,17 @@
                         </div>
                     </div>
                     <!--modal code that contains the url_for to action the delete_profile function-->
-                    <div id="modal1" class="modal">
-                        <div class="modal-content">
-                            <h4>Whoooa there!</h4>
-                            <p>Are you sure you want to delete me??</p>
-                        </div>
-                        <div class="modal-footer">
-                            <a href="#!" class="modal-close btn green left">No, I don't!</a>
-                            <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
-                                class="modal-close btn red right">Yes, I do!</a>
+                    <div id="modal1" class="modal center-align">
+                        <div class="container">
+                            <div class="modal-content">
+                                <h4>Whoooa there!</h4>
+                                <p>Are you sure you want to delete me??</p>
+                            </div>
+                            <div class="modal-footer">
+                                <a href="#!" class="modal-close btn left">No, I don't!</a>
+                                <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
+                                    class="modal-close btn red right">Yes, I do!</a>
+                            </div>
                         </div>
                     </div>
                     {% endif %}
