added no content else to all category pages

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -92,7 +92,8 @@
     <div class="container center-align">
         <h3>Oh No!</h3>
         <img class="sad-face" src="static/images/sad-face.png" alt="sad face">
-        <h3>The larder is empty!</h2>
+        <h3>The larder is empty!</h3>
+        <h3>You should restock it!</h3>
     </div>
     {% endif %}
 </div>
