--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -8,6 +8,7 @@
         <!--show which user is logged in to the site-->
         <p>logged in: {{session.user}}</p>
     </div>
+    {% if recipes.count()>0 %}
     <div class="row">
         <!--jinja for loop to pull individual recipes from DB-->
         {% for recipe in recipes %}
@@ -65,6 +66,14 @@
         </div>
         {% endfor %}
     </div>
+    {% else %}
+    <div class="container center-align">
+        <h3>Oh No!</h3>
+        <img class="sad-face" src="static/images/sad-face.png" alt="sad face">
+        <h3>The larder is empty!</h3>
+        <h3>You should restock it!</h3>
+    </div>
+    {% endif %}
 </div>
 
 {% endblock%}
