--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -65,21 +65,17 @@
                     <!--if user is logged in and user added the recipe they are able to edit or delete it from the DB-->
                     {% if session.user|lower == recipe.recipe_added|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
-                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn red left">delete</a><br>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn center-align"><i
+                                class="far fa-edit"></i>edit</a>
                     </div>
                     <!--if larder-admin is logged in they are able to edit or delete it from the DB-->
                     {% elif session.user|lower == "larderadmin"|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
-                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn red left">delete</a><br>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn center-align"><i
+                                class="far fa-edit"></i>edit</a>
                     </div>
                     {% endif %}
                     <div class="center-align">
-                        <br>
-                        <hr>
                         <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
                             recipe...</a>
                     </div>
