added extra line to else condition

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -85,11 +85,12 @@
         {% endfor %}
     </div>
     {% else %}
-    <div class="container center-align">
+    <div class="col s12 center-align">
         <h3>Oh No!</h3>
         <img class="sad-face" src="static/images/sad-face.png" alt="sad face">
         <h3>The larder is empty!</h3>
         <h3>You should restock it!</h3>
+        <h3>Why not add a recipe?</h3>
     </div>
     {% endif %}
 </div>
