--- a/templates/sides.html
+++ b/templates/sides.html
@@ -89,6 +89,7 @@
         <img class="sad-face" src="static/images/sad-face.png" alt="sad face">
         <h3>The larder is empty!</h3>
         <h3>You should restock it!</h3>
+        <h3>Why not add a recipe?</h3>
     </div>
     {% endif %}
 </div>
