--- a/templates/desserts.html
+++ b/templates/desserts.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!--content container-->
-<div class="container">
+<div class="main-container container">
     <div class="row center-align">
         <h3>desserts</h3>
         <!--show which user is logged in to the site-->
