--- a/templates/sides.html
+++ b/templates/sides.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!--content container-->
-<div class="container">
+<div class="main-container container">
     <div class="row center-align">
         <h3>sides</h3>
         <!--show which user is logged in to the site-->
