--- a/templates/starters.html
+++ b/templates/starters.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!--content container-->
-<div class="container">
+<div class="main-container container">
     <div class="row center-align">
         <h3>starters</h3>
         <!--show which user is logged in to the site-->
@@ -83,7 +83,7 @@
         {% endfor %}
     </div>
     {% else %}
-    <div class="container center-align">
+    <div class="center-align">
         <h3>Oh No!</h3>
         <img class="sad-face" src="static/images/sad-face.png" alt="sad face">
         <h3>The larder is empty!</h3>
