added more features to readme and rel="noreferrer noopener"

--- a/templates/base.html
+++ b/templates/base.html
@@ -162,19 +162,19 @@
                     <!--Facebook-->
                     <p>
                         <a class="social" href="http://facebook.com" aria-label="click for IPP on Facebook"
-                            target="_blank">
+                            target="_blank" rel="noreferrer noopener">
                             <i class="fab fa-facebook-f fa-2x" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                         <!--Twitter-->
                         <a class="social" href="http://twitter.com" aria-label="click for IPP on Twitter"
-                            target="_blank">
+                            target="_blank" rel="noreferrer noopener">
                             <i class="fab fa-twitter fa-2x" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                         <!--Instagram-->
                         <a class="social" href="http://instagram.com" aria-label="click for IPP on Instagram"
-                            target="_blank">
+                            target="_blank" rel="noreferrer noopener">
                             <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
