--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -58,7 +58,8 @@
                             <label for="query"></label>
                         </form>
                         <button type="submit" form="{{ cookbook.cookbook_chef }}" class="btn left">recipes</button>
-                        <a href="{{ cookbook.cookbook_amazon }}" target="_blank" class="btn right">buy now</a>
+                        <a href="{{ cookbook.cookbook_amazon }}" target="_blank" rel="noreferrer noopener"
+                            class="btn right">buy now</a>
                     </div>
                 </div>
                 <!--Materialize card structure - on click of image-->
