--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -16,7 +16,7 @@
                     <i class="fas fa-bread-slice fa-2x icon hide-on-small-only"></i>
                 </div>
                 <div class="input-field col s11">
-                    <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
+                    <input id="cookbook_name" name="cookbook_name" type="text" class="validate" required>
                     <label class="add-label" for="cookbook_name">cookbook name</label>
                 </div>
                 <div class="col s1"></div>
@@ -27,7 +27,7 @@
                     <i class="fas fa-user fa-2x icon hide-on-small-only"></i>
                 </div>
                 <div class="input-field col s11">
-                    <input id="cookbook_chef" name="cookbook_chef" type="text" class="validate">
+                    <input id="cookbook_chef" name="cookbook_chef" type="text" class="validate" required>
                     <label class="add-label" for="cookbook_chef">cookbook chef</label>
                 </div>
                 <div class="col s1"></div>
@@ -38,7 +38,7 @@
                     <i class="fas fa-book fa-2x icon hide-on-small-only"></i>
                 </div>
                 <div class="input-field col s11">
-                    <input id="cookbook_image" name="cookbook_image" type="text" class="validate">
+                    <input id="cookbook_image" name="cookbook_image" type="text" class="validate" required>
                     <label class="add-label" for="cookbook_image">cookbook image - add Amazon image URL here</label>
                 </div>
                 <div class="col s1"></div>
@@ -49,7 +49,7 @@
                     <i class="fas fa-camera fa-2x icon hide-on-small-only"></i>
                 </div>
                 <div class="input-field col s11">
-                    <input id="cookbook_amazon" name="cookbook_amazon" type="text" class="validate">
+                    <input id="cookbook_amazon" name="cookbook_amazon" type="text" class="validate" required>
                     <label class="add-label" for="cookbook_amazon">cookbook amazon</label>
                 </div>
                 <div class="col s1"></div>
@@ -60,7 +60,7 @@
                     <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
                 </div>
                 <div class="input-field col s11">
-                    <textarea id="cookbook_desc" name="cookbook_desc" class="validate"></textarea>
+                    <textarea id="cookbook_desc" name="cookbook_desc" class="validate" required></textarea>
                     <label class="add-label" for="cookbook_desc">cookbook description</label>
                 </div>
                 <div class="col s1"></div>
