added dropdowns to add_recipe.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,6 +218,7 @@ a.social:hover {
 
   input[type=text]:not(.browser-default) {
       color: #2c642e;
+      font-family: 'Roboto Mono', monospace;
   }
 
   .reglog input[type=text]:not(.browser-default) {
