--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,7 +7,9 @@
         <div class="col s12 center-align">
             <h3>recipes</h3>
             <!--show which user is logged in to the site-->
+            {% if 'user' in session %}
             <p>logged in: {{session.user}}</p>
+            {% endif %}
         </div>
     </div>
 
