added sane class to categories cards

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -17,12 +17,9 @@
             <!--Card 1-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover" title="show starters">
+                    <div class="card-image waves-effect waves-block waves-light" title="show starters">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_starters') }}"><img src="/static/images/starter.jpg" alt=""></a>
-                        <a href="{{url_for('show_starters') }}"
-                            class="btn-floating halfway-fab waves-effect waves-light green"><i
-                                class="fas fa-plus"></i></a>
                     </div>
                     <div class="card-content center-align">
                         <p>starters</p>
@@ -32,12 +29,9 @@
             <!--Card 2-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover" title="show mains">
+                    <div class="card-image waves-effect waves-block waves-light" title="show mains">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg" alt=""></a>
-                        <a href="{{url_for('show_mains') }}"
-                            class="btn-floating halfway-fab waves-effect waves-light green"><i
-                                class="fas fa-plus"></i></a>
                     </div>
                     <div class="card-content center-align">
                         <p>mains</p>
@@ -47,12 +41,9 @@
             <!--Card 3-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover" title="show desserts">
+                    <div class="card-image waves-effect waves-block waves-light" title="show desserts">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg" alt=""></a>
-                        <a href="{{url_for('show_desserts') }}"
-                            class="btn-floating halfway-fab waves-effect waves-light green"><i
-                                class="fas fa-plus"></i></a>
                     </div>
                     <div class="card-content center-align">
                         <p>desserts</p>
@@ -65,12 +56,9 @@
             <!--Card 4-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover" title="show sides">
+                    <div class="card-image waves-effect waves-block waves-light" title="show sides">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg" alt=""></a>
-                        <a href="{{url_for('show_sides') }}"
-                            class="btn-floating halfway-fab waves-effect waves-light green"><i
-                                class="fas fa-plus"></i></a>
                     </div>
                     <div class="card-content center-align">
                         <p>sides</p>
@@ -80,12 +68,9 @@
             <!--Card 5-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover" title="show cakes">
+                    <div class="card-image waves-effect waves-block waves-light" title="show cakes">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg" alt=""></a>
-                        <a href="{{url_for('show_cakes') }}"
-                            class="btn-floating halfway-fab waves-effect waves-light green"><i
-                                class="fas fa-plus"></i></a>
                     </div>
                     <div class="card-content center-align">
                         <p>cakes & biscuits</p>
@@ -95,12 +80,9 @@
             <!--Card 6-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover" title="show drinks">
+                    <div class="card-image waves-effect waves-block waves-light" title="show drinks">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg" alt=""></a>
-                        <a href="{{url_for('show_drinks') }}"
-                            class="btn-floating halfway-fab waves-effect waves-light green"><i
-                                class="fas fa-plus"></i></a>
                     </div>
                     <div class="card-content center-align">
                         <p>drinks</p>
