sorted recipe alignment in dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,9 +85,10 @@
                 <ul class="collapsible" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header">
-                            <span>recipes</span>
+                            <p class="center-align">recipes</p>
                         </div>
                         <div class="collapsible-body body-drop">
+                            <div class="divider"></div>
                             <ul>
                                 <li><a href="{{ url_for('all_recipes') }}">all recipes</a></li>
                                 <li class="divider"></li>
