removed inline styling

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -21,7 +21,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-search prefix"></i>
                     <input type="text" name="query" id="query" class="validate search">
-                    <label for="query" style="color: #2c642e">search</label>
+                    <label for="query">search</label>
                 </div>
             </div>
             <div class="row center-align">
