--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,34 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
+/*----------------------------------------------------General formatting for all pages*/
+
 main, nav, footer {
     font-family: 'Roboto Mono', monospace;
     color: #2c642e;
-}
-
-nav {
-    background-color: white;
-}
-
-nav ul a {
-    color: #2c642e;
-}
-
-nav .brand-logo {
-    color: #2c642e;
-}
-
-.sidenav {
-    font-family: 'Roboto Mono', monospace;
-    color: #2c642e;
-}
-
-.sidenav li>a {
-    color: #2c642e;
-}
-
-.page-footer {
-    background-color: #2c642e;
-    padding-top: 50px;
 }
 
 .bg-container {
@@ -42,7 +18,7 @@ nav .brand-logo {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
 }
 
 .flashes h5 {
@@ -52,33 +28,7 @@ nav .brand-logo {
     line-height: 2;
 }
 
-.landing {
-    background-color: #2c642e;
-    color: white;
-    opacity: 0.9;
-    margin-top: 25px;
-}
-
-.fa-hamburger::before {
-    color: #2c642e;
-}
-
-.fa-times-circle::before {
-    color: #2c642e;
-}
-
-.cat-card {
-    margin-top: 25px;
-}
-
-.card .card-content p {
-    font-size: 14px;
-}
-
-.rec-style {
-    font-size: 18px;
-    font-weight: 500;
-}
+/*----------------------------------------------------Button styling for all pages*/
 
 .btn {
     background-color: #2c642e;
@@ -89,53 +39,9 @@ nav .brand-logo {
     color: #2c642e;
 }
 
-p.recipe-p {
-    padding-bottom: 10px;
-}
-
 .btn-large {
     width: 100px;
     margin-bottom: 10px;
-}
-
-.rec-card {
-    padding-top: 25px;
-}
-
-.show-img {
-    height: 350px;
-    width: 350px;
-    margin-top: 50px;
-}
-
-@media (min-width: 320px) and (max-width: 568px) {
-    .show-img {
-        height: 275px;
-        width: 275px;
-        margin-top: 20px;
-    }
-
-    h4 {
-        text-align: center;
-    }
-}
-
-.method {
-    padding-bottom: 15px;
-}
-
-.card-image {
-    height: 23em;
-}
-
-.fa-question-circle:before {
-    content: "\f059";
-    color: #2c642e;
-}
-
-.icon {
-    padding-top: 30px;
-    padding-right: 20px;
 }
 
 .btn-login {
@@ -151,18 +57,44 @@ p.recipe-p {
     background-color: #2c642e;
 }
 
-a.land-link {
-    color: white;
-    text-decoration: none;
+/*----------------------------------------------------NavBar styling*/
+
+nav {
+    background-color: white;
 }
 
-#wrap {
-    padding-left: 0px;
-    padding-right: 0px;
+nav ul a {
+    color: #2c642e;
 }
 
-a.land-link:hover {
-    color: #9ad39c;
+nav .brand-logo {
+    color: #2c642e;
+}
+
+
+.fa-hamburger::before {
+    color: #2c642e;
+}
+
+/*----------------------------------------------------SideNav styling*/
+
+.sidenav {
+    font-family: 'Roboto Mono', monospace;
+    color: #2c642e;
+}
+
+.sidenav li>a {
+    color: #2c642e;
+}
+
+.collapsible-header {
+    display: block;
+}
+/*----------------------------------------------------Footer styling*/
+
+.page-footer {
+    background-color: #2c642e;
+    padding-top: 50px;
 }
 
 a.email {
@@ -181,81 +113,178 @@ a.social:hover {
     color: #9ad39c;
 }
 
-/* reg and login styles*/
-/* label color */
+/*----------------------------------------------------Landing Page styling*/
 
-  
-  /* search label style */
-  /* label focus color */
-  .search {
+.landing {
+    background-color: #2c642e;
+    color: white;
+    opacity: 0.9;
+    margin-top: 25px;
+}
+
+a.land-link {
+    color: white;
+    text-decoration: none;
+}
+
+a.land-link:hover {
+    color: #9ad39c;
+}
+
+/*----------------------------------------------------General card styling for all pages using*/
+
+.fa-times-circle::before {
+    color: #2c642e;
+}
+
+.cat-card {
+    margin-top: 25px;
+}
+
+.card .card-content p {
+    font-size: 14px;
+}
+
+.rec-style {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+p.recipe-p {
+    padding-bottom: 10px;
+}
+
+.card-image {
+    height: 23em;
+}
+
+/*----------------------------------------------------Styling for show_recipe*/
+
+.rec-card {
+    padding-top: 25px;
+}
+
+.show-img {
+    height: 350px;
+    width: 350px;
+    margin-top: 50px;
+}
+
+.sad-face {
+    height: 200px;
+    width: 200px;
+}
+
+/*----------------------------------------------------show_recipe styling*/
+
+/*----------------------------------------------------media query to control image size*/
+
+@media (min-width: 320px) and (max-width: 568px) {
+    .show-img {
+        height: 275px;
+        width: 275px;
+        margin-top: 20px;
+    }
+    
+    h4 {
+        text-align: center;
+    }
+}
+
+.method {
+    padding-bottom: 15px;
+}
+
+
+.fa-question-circle:before {
+    content: "\f059";
+    color: #2c642e;
+}
+
+.icon {
+    padding-top: 30px;
+    padding-right: 20px;
+}
+
+#wrap {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+/*----------------------------------------------------Search bar styling*/
+
+.search {
       color: #2c642e;
-  }
+}
 
-  .fa-plus-square::before {
+/*----------------------------------------------------Add/Edit recipe styling*/
+
+.fa-plus-square::before {
       color: #2c642e;
-  }
+}
 
-  .fa-trash-alt::before {
+.fa-trash-alt::before {
       color: #2c642e;
-  }
+}
 
-  .book-chef {
+  /*----------------------------------------------------Cookbook styling*/
+
+.book-chef {
       font-size: 12px;
-  }
+}
 
-  .card-title-chef {
+.card-title-chef {
       font-weight: 600;
-  }
+}
 
-  a.message {
+a.message {
       text-decoration: underline;
       color: #2c642e;
-  } 
+} 
 
-  /* label color */
-  .input-field label {
+  /*----------------------------------------------------Form styling*/
+
+.input-field label {
     color: #5fb962;
-  }
+}
 
-  input[type=text]:not(.browser-default) {
-      color: #2c642e;
-      font-family: 'Roboto Mono', monospace;
-  }
+input[type=text]:not(.browser-default) {
+    color: #2c642e;
+    font-family: 'Roboto Mono', monospace;
+}
 
-  .reglog input[type=text]:not(.browser-default) {
+.reglog input[type=text]:not(.browser-default) {
     color: white;
 }
-  /* label focus color */
-  .input-field input[type=text]:focus + label {
-    color: white;
-  }
   
-  .reglog .input-field input[type=text]:focus + label {
+.input-field input[type=text]:focus + label {
     color: white;
-  }
+}
+  
+.reglog .input-field input[type=text]:focus + label {
+    color: white;
+}
 
-  /* label underline focus 
-  /* label underline focus color */
-  .input-field input[type=text]:focus {
+.input-field input[type=text]:focus {
     border-bottom: 1px solid white;
     box-shadow: 0 1px 0 0 white;
-  }
-  /* valid color */
-  .input-field input[type=text].valid {
+}
+
+.input-field input[type=text].valid {
     border-bottom: 1px solid white;
     box-shadow: 0 1px 0 0 #000;
-  }
-  /* invalid color */
-  .input-field input[type=text].invalid {
+}
+  
+.input-field input[type=text].invalid {
     border-bottom: 1px solid red;
     box-shadow: 0 1px 0 0 red;
-  }
-  /* icon prefix focus color */
-  .input-field .prefix.active {
+}
+  
+.input-field .prefix.active {
     color: white;
-  }
+}
 
-  /*----------------------------------------------------Back to Top Button*/
+/*----------------------------------------------------Back to Top Button*/
 
 #myBtn {
     display: none;
@@ -279,14 +308,10 @@ a.social:hover {
     border-color: #fff;
   }
   
-  .sad-face {
-      height: 200px;
-      width: 200px;
-  }
 
-  /*----------------------------------------------------Media query to keep footer at bottom of page on iPad Pro*/
+/*----------------------------------------------------Media query to keep footer at bottom of page on iPad Pro*/
 
-  @media (min-width: 1024px) and (max-width: 1365px) {
+@media (min-width: 1024px) and (max-width: 1365px) {
 
     .main-container {
     min-height: 30vh;
@@ -295,13 +320,12 @@ a.social:hover {
     position: relative;
     padding-bottom: 200px;
     }
-  }
+}
 
-  .profile-btn {
+/*----------------------------------------------------Profile Page Styling*/
+
+.profile-btn {
       margin-top: 5px;
       margin-bottom: 5px;;
-  }
+}
 
-  .collapsible-header {
-      display: block;
-  }
