added title to cookbooks.html

--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -43,7 +43,7 @@
             <!--Materialize card format to show cookbooks-->
             <div class="card">
                 <!--Materialize card structure - image-->
-                <div class="card-image waves-effect waves-block waves-light">
+                <div class="card-image waves-effect waves-block waves-light" title="click for more info">
                     <img class="activator" src="{{ cookbook.cookbook_image }}"
                         alt="book cover for {{ cookbook.cookbook_name }}">
                 </div>
